# CVE2PoC

./: README.md  pyproject.toml
CVE2PoC/: __init__.py
CVE2PoC/core/: banner.py  bug_bounty.py  cpe.py  cve.py  display.py  exploits.py  labs.py  mitigations.py  report.py  user_agent.py
CVE2PoC/data/samples/: cves_20.txt  cves_40.txt
