[project]
name = "CVE2PoC"
version = "1.0.0"
description = "Search PoCs related to a CVE ID"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "bs4",
    "markdown",
    "argcomplete",
    "python-dotenv",
    "requests",
    "rich",
    "tomli",
    "pyyaml",
]

classifiers=[
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Security"
]

[project.scripts]
cve2poc = "CVE2PoC:main"

[project.urls]
homepage = "https://github.com/0liverFlow/CVE2PoC"
issues = "https://github.com/0liverFlow/CVE2PoC/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "CVE2PoC/*",
]
